# ual

./: CHANGELOG.md  COMPUTE_SPEC_V2.md  DESIGN_v0.8.md  LOS_UAL.md  MANUAL.md  Makefile  README.md  TODO.md  bench_test.go  benchmark_backends.sh  bring.go  build.sh  clean.sh  go.mod  make_release.sh  project.tree  renumber_examples.sh  stack.go  stack_fast.go  stack_int64.go  stack_int64_test.go  stack_test.go  sync_version.sh  test_rust_backend.sh  ual  ual-philosophy-01.md  ual-philosophy-02.md  ual-philosophy-03.md  ual-philosophy-04.md  view.go  view_test.go  walk.go  walk_test.go  worksteal.go  worksteal_test.go
benchmarks/: RESULTS.md  bench.sh  go.mod  pipeline_bench_test.go  run_benchmarks.sh
doc/: ual-1.1-stdlib.md
docs/: BENCHMARKS.md  BENCHMARK_SPECIFICATION.md  CHANGELOG.md  COMPUTE_SPEC_V2.md  CONCURRENCY.md  DATA_COORDINATION.md  DESIGN_v0.8.md  DOCUMENTATION_REVIEW.md  ERROR_PHILOSOPHY.md  MANUAL.md  PERFORMANCE.md  README.md  RUST_BACKEND_STATUS.md
examples/: 001_fibonacci.ual  002_factorial.ual  003_reductions.ual  004_search.ual  005_filter.ual  006_map.ual  007_gcd.ual  008_primes.ual  009_power.ual  010_worksteal.ual  011_error_handling.ual  012_error_comprehensive.ual  013_error_stack.ual  014_go_style_errors.ual  015_defer_stack.ual  016_spawn.ual  017_spawn_chain.ual  018_take_sync.ual  019_take_timeout.ual  020_direct_pop.ual  021_take_timeout_var.ual  022_pipeline.ual  023_consider.ual  02_factorial.go  (+152 more)
rual/: Cargo.toml  README.md
rual/benches/: stack_bench.rs
rual/src/: lib.rs  stack.rs  sync.rs  value.rs  view.rs  worksteal.rs
(+290 files in other folders)
